--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -10,8 +10,8 @@
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
 
-- type: rss
-  icon: "fas fa-rss"
+- type: instagram
+  icon: "fas fa-instagram"
   noblank: true
 # Uncomment and complete the url below to enable more contact options
 #
