--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,4 +1,4 @@
-emm:
-   name: emm jose
+Emm:
+   name: Emm
    twitter: emmjosee
-   url: https://github.com/Emm-Archives
+   url: https://www.instagram.com/emm_archives/
