--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ comments:
   provider: disqus
   # The provider options are as follows:
   disqus:
-    shortname: http://disqus.com/by/emmarchives
+    shortname: emm-archives
   # utterances settings › https://utteranc.es/
   utterances:
     repo: # <gh-username>/<repo>
