--- a/_config.yml
+++ b/_config.yml
@@ -109,20 +109,20 @@ toc: true
 
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: disqus
+  provider: giscus
   # The provider options are as follows:
   disqus:
-    shortname: emm-archives
+    shortname: 
   # utterances settings › https://utteranc.es/
   utterances:
     repo: # <gh-username>/<repo>
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo:
-    repo_id:
-    category: 
-    category_id: 
+    repo: Emm-Archives/Giscus
+    repo_id: R_kgDONamRaw
+    category: Design Archives 
+    category_id: DIC_kwDONamRa84ClCSi 
     mapping: # optional, default to 'pathname'
     strict: # optional, default to '0'
     input_position: # optional, default to 'bottom'
